compiler/tests-spec/testData/psi/templates/identifiers/labelReference.kt
fun f() {
    return@<!ELEMENT!>

    while (true) {
        break@<!ELEMENT!>
        continue@<!ELEMENT!>
    }
}
